# optimization-methods-labs

./: .gitignore  README.md  one_dimensional_optimization.py
code/: one_dimensional_optimization.py
lab1/: README.md  one_dimensional_optimization.py
lab1/code/: main.py  one_dimensional_optimization.py  pyproject.toml
lab1/report/: report.fls  report.tex
lab2/: main.py  pyproject.toml
report/: report.tex
